[package]
name = "rustymap"
version = "0.13.0"
edition = "2021"
description = "A Rust port of nmap for network exploration and security auditing"
license = "MIT"
repository = "https://github.com/Sal1699/RustyMap"
homepage = "https://Sal1699.github.io/RustyMap/"
readme = "README.md"
keywords = ["network", "scanner", "nmap", "security", "pentest"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "rustymap"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "process"] }
clap = { version = "4", features = ["derive"] }
ipnet = "2"
trust-dns-resolver = "0.23"
futures = "0.3"
anyhow = "1"
colored = "2"
chrono = "0.4"
pnet = "0.34"
rand = "0.8"
socket2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
ctrlc = "3"
tera = "1"
regex = "1"
once_cell = "1"
rhai = { version = "1.18", features = ["sync"] }
aes-gcm = "0.10"
argon2 = "0.5"
rpassword = "7"
base64 = "0.22"
toml = "0.8"
tiny_http = "0.12"
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-tar", "archive-zip", "compression-flate2"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pki-types = "1"
x509-parser = "0.16"
ratatui = "0.28"
crossterm = "0.28"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
